--- a/Invillia-challenge/package.json
+++ b/Invillia-challenge/package.json
@@ -16,6 +16,7 @@
     "@types/react-native": "^0.73.0",
     "expo": "~50.0.6",
     "expo-app-loading": "^2.1.1",
+    "expo-av": "~13.10.5",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
